Create 2nd page + Hyperlinks

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div id="title">
     <div class="line lline">
         <ul>
-            <li class="lli"><a href="*">Page one</a></li>
+            <li class="lli"><a href="photography.html">Photography</a></li>
             <li class="rli"><a href="*">Page two</a></li>
         </ul>
     </div>
-    <h1>Kieran Dean</h1>
+    <a href="index.html"><h1>Kieran Dean</h1></a>
     <div class="line rline">
         <ul>
             <li class="lli"><a href="*">Page three</a></li>
