nav bar updated and uniform across pages

--- a/three.html
+++ b/three.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/photography.css">
+    <link rel="stylesheet" href="css/three.css">
     <script src=scripts/main.js></script>
-    <title>Photography</title>
+    <title>Kier's bit of internet</title>
 </head>
 <body>
     
 <div id="wrapper">
-    <nav id="leftnav">
+
+    <div id="navbar">
+
+        <nav id="leftnav">
             <ul>
                 <li><a href="photography.html">Photography</a></li>
                 <li><a href="two.html">Page two</a></li>
@@ -25,9 +28,7 @@
             </ul>
         </nav>
 
-    <div id='ldiv'></div>
-    <img src="img/homephoto.png" alt="Kieran Dean">
-    <div id='rdiv'></div>
+    </div>
 
 </div>
 
