--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/photography.css">
+    <link rel="stylesheet" href="css/contact.css">
     <script src=scripts/main.js></script>
-    <title>Photography</title>
+    <title>Kier's bit of internet</title>
 </head>
 <body>
     
 <div id="wrapper">
+
     <nav id="leftnav">
             <ul>
                 <li><a href="photography.html">Photography</a></li>
@@ -24,11 +25,6 @@
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
-
-    <div id='ldiv'></div>
-    <img src="img/homephoto.png" alt="Kieran Dean">
-    <div id='rdiv'></div>
-
 </div>
 
 </body>
