--- a/index.html
+++ b/index.html
@@ -6,34 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <script src=scripts/main.js></script>
-    <title>Kier's bit of internet</title>
+    <title>Kier's</title>
 </head>
 <body>
     
 <div id="wrapper">
-   
-    <div id="title">
-    <div class="line lline">
-        <ul>
-            <li class="lli"><a href="photography.html">Photography</a></li>
-            <li class="rli"><a href="*">Page two</a></li>
-        </ul>
-    </div>
-    <a href="index.html"><h1>Kieran Dean</h1></a>
-    <div class="line rline">
-        <ul>
-            <li class="lli"><a href="*">Page three</a></li>
-            <li class="rli"><a href="*">Page four</a></li>
-        </ul>
-    </div>
-    </div>
 
+    <div id="navbar">
 
-    <div id="main">
-        
-        <div id="homephoto">
-        <img src="img/homephoto.png" alt="Brilliant Web Designer">
-        </div>
+        <nav id="leftnav">
+            <ul>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a href="two.html">Page two</a></li>
+            </ul>
+        </nav>
+        <div id="heading"><a href="index.html"><h1>Kieran Dean</h1></a></div> 
+        <nav id="rightnav">
+            <ul>
+                <li><a href="three.html">Page three</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+            </ul>
+        </nav>
+
+        <div id="background"></div>
+
     </div>
 
 </div>
