--- a/contact.html
+++ b/contact.html
@@ -13,19 +13,25 @@
 <div id="wrapper">
 
     <nav id="leftnav">
-            <ul>
-                <li><a href="photography.html">Photography</a></li>
-                <li><a href="two.html">Page two</a></li>
-            </ul>
-        </nav>
-        <div id="heading"><a href="index.html"><h1>Kieran Dean</h1></a></div> 
-        <nav id="rightnav">
-            <ul>
-                <li><a href="three.html">Page three</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-        </nav>
-</div>
+        <ul>
+            <li><a href="photography.html">Photography</a></li>
+            <li><a href="lending.html">Lending</a></li>
+        </ul>
+    </nav>
+    <div id="heading"><a href="index.html">
+            <h1>Kieran Dean</h1>
+        </a></div>
+    <nav id="rightnav">
+        <ul>
+            <li><a href="articles.html">Articles</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+    </nav>
 
-</body>
-</html>
+    <div id="background">
+            
+
+        </div>
+
+
+</div>
