--- a/lending.html
+++ b/lending.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
-    <script src=scripts/main.js></script>
-    <title>Kier's bit of internet</title>
+    <script src=scripts/main.js> </script> <title>Kier's bit of internet</title>
 </head>
 <body>
     
@@ -29,17 +29,8 @@
     </nav>
 
     <div id="background">
-            <div id="main">
+            
 
-                <div id="position">
-                    <img src="img/homephoto.png" alt="Brilliant Web Designer">
-                </div>
-            </div>
-
-        </div>
-
+    </div>
 
 </div>
-
-</body>
-</html>
