--- a/articles.html
+++ b/articles.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/articles.css">
     <script src=scripts/main.js> </script> <title>Kier's bit of internet</title>
 </head>
 <body>
@@ -27,10 +27,36 @@
             <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
-
     <div id="background">
+        <article id="leftsnippet">
+            <h2>Another interesting article</h2>
+            <p>LoremLoremLorem Lorem Lorem Lorem Lorem LoremLorem LoremLoremLoremLorem LoremLoremLoremLoremLorem
+                LoremLoremLorem
+                LoremLoremLorem Lorem Lorem Lorem Lorem LoremLorem LoremLoremLoremLorem LoremLoremLoremLoremLorem
+                LoremLoremLorem
+            </p>
+            <img src="img/prison.jpg" alt="Men of Milk">
+            </article>
+            <div id="middle">
+                <p>Take a look around. Each article aims to answer a question or shed light on topics out of the mainstream flow of
+                    information.</p>
+                <p>Keep your eyes on the space below, full length articles can be found here.</p>
+            </div>
+            <article id="rightsnippet">
+                <h2>Why do we drink milk?</h2>
+                <p>For a very long time, milk was a small part of the lives of a very small number of people. It was used as a
+                    substitute during cold winters where crops couldn't grow. Around the first world war, the US government sent
+                    vast amounts of canned and powdered milk overseas to fight malnutrition. In response, many farmers in the US got
+                    rid of all livestock and crops apart from cows. As a result, when the US had a huge surplus of milk with no
+                    demand, by this point farmers and processing plants had invested far too much money into the soon to be milk
+                    industry.
+                    So, instead of shutting down, they invested in advertising and milk education programs in schools. Soon adverts
+                    were plastered all over the US claiming that children should drink 4 glasses of milk a day. Shortly after this,
+                    milk was introduced into every school meal.
             
-
-    </div>
+                </p>
+                <img src="img/milkmen.jpg" alt="Men of Milk">
+            </article>
+            </div>
 
 </div>
