article 1 and popup 1 complete

--- a/contact.html
+++ b/contact.html
@@ -12,21 +12,23 @@
     
 <div id="wrapper">
 
-    <nav id="leftnav">
-        <ul>
-            <li><a href="photography.html">Photography</a></li>
-            <li><a href="lending.html">Lending</a></li>
-        </ul>
-    </nav>
-    <div id="heading"><a href="index.html">
-            <h1>Kieran Dean</h1>
-        </a></div>
-    <nav id="rightnav">
-        <ul>
-            <li><a href="articles.html">Articles</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-    </nav>
+    <div id="header">
+        <nav id="leftnav">
+            <ul>
+                <li><a href="photography.html">Photography</a></li>
+                <li><a href="lending.html">Lending</a></li>
+            </ul>
+        </nav>
+        <div id="heading"><a href="index.html">
+                <h1>Kieran Dean</h1>
+            </a></div>
+        <nav id="rightnav">
+            <ul>
+                <li><a href="articles.html">Articles</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <div id="background">
             
