--- a/photography.html
+++ b/photography.html
@@ -11,8 +11,8 @@
 <body>
     
 <div id="wrapper">
-
-    <nav id="leftnav">
+    <div id="header">
+        <nav id="leftnav">
             <ul>
                 <li><a href="photography.html">Photography</a></li>
                 <li><a href="lending.html">Lending</a></li>
@@ -27,6 +27,7 @@
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
+    </div>
 
     <div id="background">
             
