Ariticle page uniformed + responsive. **todo: write article, fix window close milkmodal. ++ updated all navbars

--- a/lending.html
+++ b/lending.html
@@ -24,7 +24,7 @@
         <nav id="rightnav">
             <ul>
                 <li><a href="articles.html">Articles</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
