--- a/photography.html
+++ b/photography.html
@@ -24,7 +24,7 @@
         <nav id="rightnav">
             <ul>
                 <li><a href="articles.html">Articles</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
