changes throughout Lending page started ++backgrounds lending + article

--- a/articles.html
+++ b/articles.html
@@ -150,7 +150,7 @@
     
                 <h4>Why is milk such a massive part of culture?</h4>
                 <div class="lcolumn">
-                    <p class="pmodal">For a very long time, milk was a small part of the lives of a very small number of people. It was
+                    <p class="mmodal">For a very long time, milk was a small part of the lives of a very small number of people. It was
                         used as a substitute during cold winters where crops couldn't grow. Around the first world war, the
                         US government sent vast amounts of canned and powdered milk overseas to fight malnutrition. In
                         response, many farmers in the US got rid of all livestock and crops apart from cows. As a result,
@@ -159,7 +159,7 @@
                         So, instead of shutting down, they invested in advertising and milk education programs in schools.
                         Soon adverts were plastered all over the US claiming that children should drink 4 glasses of milk a
                         day. Shortly after this, milk was introduced with every school meal.</p>
-                    <p class="pmodal">Despite the massive increase in milk consumption due to these campaigns, huge milk supplies still
+                    <p class="mmodal">Despite the massive increase in milk consumption due to these campaigns, huge milk supplies still
                         remained in the US. They sent the milk to schools, military and overseas as food aid. By the 1980s
                         the government was spending $2 billion on surplus milk until the Reagan program, in a quest to stop
                         government spending, stopped it. This didn't sit well with dairy farmers who convinced Congress to
@@ -167,21 +167,21 @@
                         pay into. The Checkoff, in turn, would then fund advertising campaigns for dairy products which were
                         approved by the US Department of Agriculture (USDA). The 'Got Milk' ads are one example. </p>
                 </div>
-                <div class="rcolumn">
-                    <p class="pmodal"> More importantly, this money would pay for partnerships with brands like Starbucks, Dominos,
+                <div class="mcolumn">
+                    <p class="mmodal"> More importantly, this money would pay for partnerships with brands like Starbucks, Dominos,
                         McDonald's, Taco Bell and others. These partnerships would ensure that companies would create
                         dairy-heavy products, like Domino's pizza for example, with 40% more cheese. This means one slice
                         has TWO-THIRDS of the recommended saturated fat.
                         Studies have concluded that the nutritional factors of milk are minuscule compared to nutrition in
                         fruit and vegetables.</p>
-                    <p class="pmodal">The USDA is in charge of one of the biggest ad campaigns in the world, aimed at getting people
+                    <p class="mmodal">The USDA is in charge of one of the biggest ad campaigns in the world, aimed at getting people
                         drinking milk. So, if it is known that milk doesn't provide any exceptional vitamins when compared
                         to vegetables, why not change the recommendation? Why not change the guidelines to promote drinking
                         water with every meal?
                         It's the oldest reason in modern civilisation - money. The dairy industry gives millions to
                         politicians to protect their interests.</p>
 
-                    <p class="pmodal">01/04/2019</p>
+                    <p class="date">01/04/2019</p>
                 </div>
             </article>
         </div>
