--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/contact.css">
-    <script src=scripts/main.js></script>
+    <script src=scripts/contact.js></script>
     <title>Kier's bit of internet</title>
 </head>
 <body>
@@ -33,7 +33,8 @@
     <div id="background">
             
 
-        </div>
+
+    </div>
 
 
 </div>
