updated contact + articles

--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
             <p><input type="text" name="name" id="forname" placeholder="Saxon"> <input type="text" id="surname"  name="name" placeholder="Tilbury">  </p>
             <p><label for="email">Email</label><label for="subject">Subject</label></p>
             <p><input type="email" id="email" placeholder="Contact@you.com"><input type="text" id="subject" placeholder="What's it about?"></p>
-            <p><input type="email" name="Your Contact Email" placeholder="me@mail.com"> </p>
-            <textarea name="message"></textarea>
+            <p><label for="message">Write a message</label></p>
+            <p><textarea name="message" id="message"></textarea></p>
         </fieldset>
     </form>
 </div>
