article page: -Broke java +update design
Lending:
+updated design

Contact:
+updated design
-finish form

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <p><label for="email">Email</label><label for="subject">Subject</label></p>
             <p><input type="email" id="email" placeholder="Contact@you.com"><input type="text" id="subject" placeholder="What's it about?"></p>
             <p><label for="message">Write a message</label></p>
-            <p><textarea name="message" id="message"></textarea></p>
+            <p><textarea name="message" id="message"></textarea><input type="submit" name="send" id="send"></p>
         </fieldset>
     </form>
 </div>
