quicksave *testing new look for 'lending'

--- a/lending.html
+++ b/lending.html
@@ -34,30 +34,17 @@
         <article id="leftsnippet">
             <h2>Kiwi</h2>
             <h3>Lending</h3>
-            <p>Studies from across the UK expose the financial difficulties among a lot of students and highlights how it impacts diet, mental health and replationships. It is easy to see why extremes such as credit cards, pay-day loans, drug trials and 'adult work' is sought after by many students.</p>
+            <p class="snipp">Studies from across the UK expose the financial difficulties among a lot of students and highlights how it impacts diet, mental health and replationships. It is easy to see why extremes such as credit cards, pay-day loans, drug trials and 'adult work' is sought after by many students.</p>
          </article>
         <div id="middle">
             <h2>Full</h2>
             <h3>Articles</h3>
-            <p>Keep your eyes on the space below, here you will find write-ups of topics I find interesting</p>
-            <p>Here you will find brief write-ups of topics I find interesting.</p>
+            <p class="snipp">Keep your eyes on the space below, here you will find write-ups of topics I find interesting</p>
+            <p class="snipp">Here you will find brief write-ups of topics I find interesting.</p>
             <span id="listcontainer">
                 <button id="milkBtn">Why do we drink milk?</button>
                 <button id="prisonBtn">Prison Farms</button>
             </span>
-        </div>
-        <article id="rightsnippet">
-            <h2>Why do we</h2>
-            <h3>drink milk?</h3>
-            <p>For a very long time, milk was a small part of the lives of a very small number of people. It was used as a
-                substitute during cold winters where crops couldn't grow.</p>
-            <p> Around the first world war, the US government sent
-                vast amounts of canned and powdered milk overseas to fight malnutrition. In response, many farmers in the US
-                got
-                rid of all livestock and crops apart from cows. As a result, when the US had a huge surplus of milk with no
-                demand. By this point farmers and processing plants had invested far too much money into the soon-to-be milk
-                industry to stop producing milk.</p>
-        </article>
-    
+        </div>    
     </div>
 </div>
