lending: +updated design
-add full report(modal)

--- a/lending.html
+++ b/lending.html
@@ -21,30 +21,28 @@
         </nav>
         <div id="heading"><a href="index.html">
                 <h1>Kieran Dean</h1>
-            </a></div>
+            </a></div><!--'Kieran Dean'HEADING-->
         <nav id="rightnav">
             <ul>
                 <li><a href="articles.html">Articles</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </div>
+    </div><!--HEADER-->
+
+    <div id="content">
+        <h2>THE PAYDAY LOAN TRAP</h2>
+        <p>Studies from across the UK expose the financial difficulties among a lot of students and highlights how it
+            impacts diet, mental health and replationships. It is easy to see why students regularly turn to solutions such
+            as credit cards, pay-day loans, drug trials and 'adult work' throughout the year.</p>
+        <p>Payday loans are notorious for their exteremly high interest rates, so much so that many students end up in more debt. Based on a study by Save the Student, I
+            estimate around £750,000 each year is moved from students account to loan companies via interest. That's a vast
+            amount of money from students who are already in debt.</p>
+        <p>'Kiwi Lending' is a two-pronged propsal for an alternative platform where students can borrow money with much
+            lower interests. Where it differs from pay-day loans is that it will operate as a peer-to-peer service meaning
+            not only can students borrow money, they can also loan money to other students through the app.</p>
     
-    <div id="background">
-        <article id="leftsnippet">
-            <h2>Kiwi</h2>
-            <h3>Lending</h3>
-            <p class="snipp">Studies from across the UK expose the financial difficulties among a lot of students and highlights how it impacts diet, mental health and replationships. It is easy to see why extremes such as credit cards, pay-day loans, drug trials and 'adult work' is sought after by many students.</p>
-         </article>
-        <div id="middle">
-            <h2>Full</h2>
-            <h3>Articles</h3>
-            <p class="snipp">Keep your eyes on the space below, here you will find write-ups of topics I find interesting</p>
-            <p class="snipp">Here you will find brief write-ups of topics I find interesting.</p>
-            <span id="listcontainer">
-                <button id="milkBtn">Why do we drink milk?</button>
-                <button id="prisonBtn">Prison Farms</button>
-            </span>
-        </div>    
     </div>
-</div>
+    <!--CONTENT-->
+
+</div><!--WRAPPER-->
