LENDING: Modal started -needs finishing

--- a/lending.html
+++ b/lending.html
@@ -14,7 +14,7 @@
 <div id="wrapper">
     <div id="header">
         <nav id="leftnav">
-            <ul>
+            <ul >
                 <li><a href="photography.html">Photography</a></li>
                 <li><a href="lending.html">Lending</a></li>
             </ul>
@@ -30,19 +30,79 @@
         </nav>
     </div><!--HEADER-->
 
-    <div id="content">
+    <article>
         <h2>THE PAYDAY LOAN TRAP</h2>
+        <p>Payday loads advertise as a quick easy solution to your money problems but the reality for a lot of people is that it
+            is just the oppoiste.</p>
         <p>Studies from across the UK expose the financial difficulties among a lot of students and highlights how it
             impacts diet, mental health and replationships. It is easy to see why students regularly turn to solutions such
             as credit cards, pay-day loans, drug trials and 'adult work' throughout the year.</p>
-        <p>Payday loans are notorious for their exteremly high interest rates, so much so that many students end up in more debt. Based on a study by Save the Student, I
+        <p>Payday loans are notorious for their exteremly high interest rates, so much so that many students end up in more
+            debt. Based on a study by Save the Student, I
             estimate around £750,000 each year is moved from students account to loan companies via interest. That's a vast
             amount of money from students who are already in debt.</p>
         <p>'Kiwi Lending' is a two-pronged propsal for an alternative platform where students can borrow money with much
             lower interests. Where it differs from pay-day loans is that it will operate as a peer-to-peer service meaning
-            not only can students borrow money, they can also loan money to other students through the app.</p>
-    
-    </div>
-    <!--CONTENT-->
+            not only can students borrow money, they can also loan money to other students through the app. The result of such a
+            platform will be students' money would stay between students.</p>
+        <button class="myBtn">Read More...</button>
+    </article>
+
+    <div class="modal">
+        <div class="content">
+            <div id="titlepage">
+<!--pageclose--><div class="close">X</div>
+            <div class="pagenumber">1</div>
+            <img src="img/solent_logo.jpg" alt="Solent University Logo">
+            <p>Solent University</p>
+            <p class="bold">School of Media and Technology</p>
+            <p>BSc (Hons) Computing</p>
+            <p class="bold">Academic Year 2017-2018</p>
+            <p class="bold sizeup">Kieran Thompson</p>
+            <p class="bold">'Kiwi Lending'</p>
+            <p class="bold">Peer-to-Peer Lending</p>
+            <p class="bold">Individual Degree Related Project (COM305)</p>
+            </div><!--title page-->
+<!--page break--><div class="pagebreak"></div>
+            <div id="contents">
+<!--pageclose--><div class="close">X</div>
+            <div class="pagenumber">2</div>          
+            <h3>Contents</h3>
+            <ul>
+                <li><a href="#introduction">Introduction & Background</a></li>
+                <li><a href="#aims">Objectives & Aims</a></li>
+
+
+            </ul>
+            </div><!--contents-->
+<!--page break--><div class="pagebreak"></div>
+            <div id="introduction">
+<!--pageclose--><div class="close">X</div>
+            <div class="pagenumber">3</div>                  
+                <h3>Introduction</h3>
+                <p class="maintext">According to a study by Save the Student among 2300 higher education students (Butler, 2018), 84% of students stress about not having enough money which this impacts diet, mental health, relationships and grades. It’s easy to see why 12% students use credit cards, 7% choose to gamble, 2% choose to perform ‘adult work’ and another 2% use payday loan companies, all as regular sources of income (Butler, 2018).  Worryingly, according to the same report when students are in a crisis and in need of money, a shocking 9% of students turn to drug trails, 5% turn to ‘adult work’ to get the extra cash they need and 3% take out loans.</p>
+                <p class="maintext">3% of students taking out loans to eat may not sound a lot of people but according to a survey by charity, Universities UK (Universities UK, 2017) there were 2.3 million students studying in the UK in 2015/2016 which means (excluding the 2% that use payday loans regularly) around 69,000 students used payday loans in an emergency last year at least once. It can be assumed that each student paid a minimum £10 interest each (based on smart-pig, the ‘leading student payday loan company’, charging £16 for a £100 loan for 20 days (Smart-Pig, 2018) then that works out to be around £690,000 paid to companies in interest alone, each year, from only the students that use payday loans in an emergency! That is over half million pounds taken from students that are quite frankly in a vulnerable position.</p>
+                <p class="maintext">Kiwi Lending aims to tackle this minefield of an industry by providing a safe fair platform for students to borrow and lend money. Kiwi Lending will only be offered to students, based on the studies about how students get money, I believe that students will happily invest small amounts for small returns at no effort.</p>
+                <p class="maintext">There are companies offering peer-to-peer lending services such as Zopa. They offer 4% on your investment or 4.6% on ‘higher risk’ investments. The projection sheet later in the report shows that investors could earn up to 10%, which will be a much lower monthly return compared to Zopa, whose investors must invest a minimum of £1000 for at least a month, but the interest rate is over double. As ‘Kiwi Lending’ will only be offered to students my theory, based on the extremes students go through to earn money, is that students will happily invest small amounts for small returns at no effort.</p>
+            </div><!--introduction-->
+<!--page break--><div class="pagebreak"></div>
+            <div id="aims">
+<!--pageclose--><div class="close">X</div>
+            <div class="pagenumber">4</div>                  
+                <h3>Objectives & Aims</h3>
+                <p class="maintext">The aim of this project is to create a prototype for a website using an online site creator such as Wix. The reason that it will only be a prototype and not the final product is because the time frame is too short to ensure that the site will be secure enough to hold financial data and follow the new data protection act (Data Protection Act, 2018). Another reason being that the Financial Conduct Authorities must approve before the students can use the service, this costs £600 for the application and takes up to 6 weeks to be accepted (Apply for Authorisation , 2018).</p>
+                <p class="maintext">‘Kiwi Lending’ aims to be a site that students can invest and borrow money through, the idea is to undercut payday loan companies with lower interest rates, and have students borrow off one another to keep the interest being paid within the student’s pockets. Students will be able to borrow up to £100 for a maximum of 30 days and pay very little interest (maximum of 40p/day) maxing at £12 interest on a £100 loan for a month. The following month a student can invest money back into the site for other students to borrow and earn money back.</p>
+                <ul id="ulaims">
+                    <li>The objective of the website is to give students an alternative place to borrow money from with a lower risk as well as giving students a low risk, low return investment opportunity.</li>
+                    <li>The site will be easy to read for people with all reading abilities.</li>
+                    <li>The site will be accessible via mobile and desktop.</li>
+                    <li>Kiwi Lending aspires to be an easy to use, hassle and risk free solution to students unexpected money problems by hosting an easy to use site with clear and concise interest and late fees.</li>
+                    <li>A projection sheet will be created on excel to calculate and estimate costs for borrowers and returns for investors to find out whether it is a viable business model that could work in practice.</li>
+                </ul>
+            </div><!--aims-->
+<!--page break--><div class="pagebreak"></div>
+        </div><!--modal-content-->
+    </div><!--myModal-->
+
 
 </div><!--WRAPPER-->
