--- a/articles.html
+++ b/articles.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/articles.css">
-    <script src=scripts/main.js></script>
+    <script src=js/main.js></script>
     <title>Kier's bit of internet</title>
 </head>
-<body onload=main()>
+<body>
 <div id="wrapper">
     <div id="header">
         <nav id="leftnav">
@@ -223,6 +223,25 @@
                     </div>
                 </article>
             </div>
-        </div> 
+    </div> 
+
+    <script>
+        var mmodal = document.getElementById('milkmodal');
+        var mbtn = document.getElementById("milkBtn");
+        var mspan = document.getElementsByClassName("close")[0];
+        
+        mbtn.onclick = function () {
+            mmodal.style.display = "block";
+            mbtn.style.color = "rgb(128, 0, 128)"
+        }
+        mspan.onclick = function () {
+            mmodal.style.display = "none";
+        }
+        window.onclick = function (event) {
+            if (event.target == mmodal) {
+            mmodal.style.display = "none";
+            }
+        }
+    </script>
                 
 </div>
